2021-05-18 Fred Gleason <fredg@paravelsystems.com>
	* Initial repo creation.
2021-05-18 Fred Gleason <fredg@paravelsystems.com>
	* Added dependency information for the 'hpklinux' package.
2021-08-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'prepare_build.sh' to automatically generate the
	correct 'linux-headers-<ver>' run time dependency.
2022-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'linux-headers' dependencies so as not to include
	the specific kernel version.
	* Incremented the package version to 4.20.35-2.
2022-06-07 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'linux-headers' dependencies so as not to include
	the specific kernel version.
	* Incremented the package version to 4.20.35-2.
2023-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'prerm' script that made it impossible to
	uninstall the 'hpklinux' package.