@@ -1,0 +1,9 @@
+#!/bin/sh
+
+ASIHPI_VERSION=4.20.35
+
+rm -f *.buildinfo *.changes *.ddeb *.deb *.dsc *.debian.tar.xz
+#rm -rf hpklinux_$ASIHPI_VERSION
+#rm -rf hpklinux_$ASIHPI_VERSION-orig
+rm -rf hpklinux_*
+rm -f debian/control
