@@ -16,3 +16,5 @@
 2023-04-13 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in the 'prerm' script that made it impossible to
 	uninstall the 'hpklinux' package.
+2023-04-13 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'clean_build.sh' script.
